--- a/E-Receitas/res/layout/activity_tipo_receita.xml
+++ b/E-Receitas/res/layout/activity_tipo_receita.xml
@@ -7,32 +7,96 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TipoReceitaActivity" >
+
     
-    <TextView 
+    <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="Tipo de Receitas"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/textNome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView1"
+        android:layout_below="@+id/textView1"
+        android:layout_marginTop="17dp"
+        android:text="Nome: " />
+
+    <EditText
+        android:id="@+id/nome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_toRightOf="@+id/textNome" />
+
+    <TextView
+        android:id="@+id/textDescricao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/descriao"
+        android:layout_alignBottom="@+id/descriao"
+        android:layout_alignLeft="@+id/textNome"
+        android:text="Descrição: " />
     
+    <EditText
+        android:id="@+id/descriao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/nome"
+        android:layout_toRightOf="@+id/textDescricao"
+        android:ems="10"
+        android:inputType="textMultiLine" />
+
     <Button
         android:id="@+id/cadastrarTipoReceita"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/textView1"
-        android:text="+ Tipo de Receita" />
+        android:layout_below="@+id/descriao"
+        android:layout_marginTop="10dp"
+        android:text="Salvar" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/listagemTipoReceita"
+        android:layout_below="@+id/cadastrarTipoReceita"
+        android:text="Cód"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <ListView
-        android:id="@+id/listaTipoReceita"
+        android:id="@+id/listagemTipoReceita"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/cadastrarTipoReceita"
-        android:layout_marginTop="25dp" >
+        android:layout_alignRight="@+id/cadastrarTipoReceita"
+        android:layout_below="@+id/textView5" >
     </ListView>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/cadastrarTipoReceita"
+        android:layout_below="@+id/cadastrarTipoReceita"
+        android:layout_marginRight="28dp"
+        android:text="Ação"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/listagemTipoReceita"
+        android:layout_alignLeft="@+id/descriao"
+        android:layout_marginLeft="18dp"
+        android:text="Nome"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
