--- a/trunk/E-Receitas/res/layout/activity_receita.xml
+++ b/trunk/E-Receitas/res/layout/activity_receita.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.ereceitas.ReceitaActivity" >
+    tools:context="br.com.ereceitas.ReceitaActivity" >z
 
     <LinearLayout
         android:layout_width="fill_parent"
